--- a/hw.exporter.activityhub/pom.xml
+++ b/hw.exporter.activityhub/pom.xml
@@ -9,6 +9,7 @@
 		<version>1.1.0</version>
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
+	<groupId>org.universAAL.lddi</groupId>
 	<artifactId>hw.exporter.activityhub</artifactId>
 	<version>0.0.3-SNAPSHOT</version>
 	<packaging>bundle</packaging>
