--- a/iso11073.library/pom.xml
+++ b/iso11073.library/pom.xml
@@ -6,6 +6,7 @@
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.universAAL.lddi</groupId>
 	<artifactId>iso11073.library</artifactId>
 	<packaging>bundle</packaging>
 	<version>0.0.3-SNAPSHOT</version>
@@ -47,7 +48,6 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>1.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
