--- a/hw.exporter.activityhub/launches/pom.xml
+++ b/hw.exporter.activityhub/launches/pom.xml
@@ -9,15 +9,18 @@
 	</parent>
 	
 	<groupId>org.universAAL.runners</groupId>
-	<artifactId>template</artifactId>
+	<artifactId>lddi.hw.exporter.activityhub</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.0</version>
+	<version>0.0.4-SNAPSHOT</version>
 	<!-- version is here equal to the level of version of the middleware -->
 	<name>Runner Folder</name>
+	<description>PaxRunner configuration for lddi.hw.exporter.activityhub artifact</description>
 
 	<properties>
 		<mw.snapshot.version>1.1.1-SNAPSHOT</mw.snapshot.version>
 		<mw.release.version>1.1.0</mw.release.version>
+		<lddi.snapshot.version>0.0.4-SNAPSHOT</lddi.snapshot.version>
+		<lddi.release.version>1.1.0</lddi.release.version>
 	</properties>
 	
 	<build>
@@ -49,12 +52,13 @@
 						<!-- Whatever you want, like: -->
 							<!-- <provision>{opt:wrap}:mvn:{groupId}/{artifactId}/{version}@{opt:#level | nostart | noupdate}</provision> -->
 
-<!--  							<provision>scan-composite:file:../target/artifact.composite</provision>
- -->							<!-- 	bus communication between 2 VMs isn't working!!! -->
-								
+  							<provision>scan-composite:file:../target/artifact.composite</provision>
+
+
+							
 								
 						<!-- config from composite; changed versions of mw-bundles as in my lddi testing frameworks -->
-  							<provision>scan-bundle:wrap:mvn:org.bouncycastle/jce.jdk13/144</provision>
+<!--   							<provision>scan-bundle:wrap:mvn:org.bouncycastle/jce.jdk13/144</provision>
 								<provision>scan-bundle:mvn:org.universAAL.middleware/mw.container.xfaces/${mw.release.version}</provision>
 							<provision>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-api/1.6.2</provision>
 							<provision>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-service/1.6.2</provision>
@@ -86,19 +90,19 @@
  							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.dependencymanager/3.0.0@nostart</provision>
 							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.devicemanager/0.9.0-SNAPSHOT</provision>
 
-							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.library/0.0.3-SNAPSHOT@nostart</provision>
-							<provision>scan-bundle:mvn:org.universAAL.lddi/iso11073.library/0.0.3-SNAPSHOT@nostart</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.library/${lddi.snapshot.version}@nostart</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/iso11073.library/${lddi.snapshot.version}@nostart</provision>
 
 							<provision>scan-bundle:mvn:org.universAAL.ontology/ont.activityhub/0.0.5-SNAPSHOT</provision>
 
-							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.networkdriver/0.0.3-SNAPSHOT</provision>
-							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.dpt1refinementdriver.iso11073/0.0.3-SNAPSHOT</provision>
-							<provision>scan-bundle:mvn:org.universAAL.lddi/hw.exporter.activityhub/0.0.3-SNAPSHOT</provision>
-							<provision>scan-bundle:mvn:org.universAAL.lddi/smp.activityhub.client/0.0.3-SNAPSHOT@nostart</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.networkdriver${lddi.snapshot.version}</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.dpt1refinementdriver.iso11073/${lddi.snapshot.version}</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/hw.exporter.activityhub/${lddi.snapshot.version}</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/smp.activityhub.client/${lddi.snapshot.version}@nostart</provision>
 
  							<provision>scan-bundle:wrap:mvn:org.jdom/jdom/1.1.3</provision>
 							<provision>scan-bundle:wrap:mvn:jaxen/jaxen/1.1.3</provision>
-							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.devicemanager/0.0.3-SNAPSHOT</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.devicemanager/${lddi.snapshot.version}</provision>
 
  							<provision>scan-bundle:wrap:mvn:javax.servlet/servlet-api/2.5</provision>
 							<provision>scan-bundle:mvn:org.mortbay.jetty/jetty-util/6.1.24</provision>
@@ -109,7 +113,7 @@
 							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.http.base/2.2.0</provision>
 							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.http.jetty/2.2.0</provision>
 							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole/3.1.8</provision>
-
+ -->
 
 	  				</provision>
 				</configuration>	
