--- a/hw.exporter.activityhub/launches/runner/felix/system.properties
+++ b/hw.exporter.activityhub/launches/runner/felix/system.properties
@@ -1,4 +1,5 @@
-felix.log.level=3
+### FELIX LOG LEVEL 1 DEFAULT, 4 DEBUG
+felix.log.level=2
 user.language=en
 osgi.noShutdown=true
 org.universAAL.middleware.peer.is_coordinator=true
