Extraction of room information from ETS4 project file implemented. How should the mapping of location from ETS4 (can by any String) to ISO defined ActivityHubLocation (enum) be done??

--- a/iso11073.library/pom.xml
+++ b/iso11073.library/pom.xml
@@ -11,8 +11,7 @@
 	<packaging>bundle</packaging>
 	<version>0.0.4-SNAPSHOT</version>
 	<name>Java class library for ISO/IEEE 11073 standard</name>
-	<description>
-	</description>
+	<description>ISO 11073 Device Categories for OSGi DeviceManager are Interfaces for all ISO 11073 sensor types, specifying methods for communication with device services.</description>
 	<inceptionYear>2012</inceptionYear>
 
 	<licenses>
