--- a/hw.exporter.activityhub/pom.xml
+++ b/hw.exporter.activityhub/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
 		<artifactId>lddi.pom</artifactId>
-		<version>1.1.0</version>
+		<version>1.1.1-SNAPSHOT</version>
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<groupId>org.universAAL.lddi</groupId>
@@ -51,36 +51,42 @@
 			<groupId>org.universAAL.support</groupId>
 			<artifactId>itests</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
-		</dependency>
-<!-- 		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.serialization</artifactId>
-		</dependency>
- -->		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.model</artifactId>
+			<artifactId>mw.container.xfaces.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context</artifactId>
+			<artifactId>mw.container.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
+			<artifactId>mw.data.representation.osgi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.context.osgi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.service.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
+			<version>1.1.4-SNAPSHOT</version>
 		</dependency>
+		
+<!-- 		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.data.serialization</artifactId>
+		</dependency> -->
+
 
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
@@ -89,7 +95,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.activityhub</artifactId>
-			<version>0.0.5-SNAPSHOT</version>
+			<version>1.1.4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -153,7 +159,7 @@
 				
 				<dependency>
 					<groupId>org.universAAL.middleware</groupId>
-					<artifactId>mw.data.serialization</artifactId>
+					<artifactId>mw.data.serialization.osgi</artifactId>
 				</dependency>
 
 				<dependency>
@@ -163,13 +169,15 @@
 					<version>3.0.0</version>
 					<scope>provided</scope>
 				</dependency>
-				
 				<dependency>
 					<groupId>org.apache.felix</groupId>
 					<artifactId>org.apache.felix.devicemanager</artifactId>
 					<version>0.9.0-SNAPSHOT</version>
 					<scope>provided</scope>
 				</dependency>
+
+				<!-- some more? -->
+
 				<dependency>
 					<groupId>org.universAAL.lddi</groupId>
 					<artifactId>knx.library</artifactId>
@@ -182,10 +190,6 @@
 					<groupId>org.universAAL.lddi</groupId>
 					<artifactId>knx.dpt1refinementdriver.iso11073</artifactId>
 				</dependency>
-				<dependency>
-					<groupId>org.universAAL.lddi</groupId>
-					<artifactId>knx.devicemanager</artifactId>
-				</dependency>
 				
 				<dependency>
 					<groupId>org.apache.felix</groupId>
@@ -197,6 +201,14 @@
 					<artifactId>org.apache.felix.webconsole</artifactId>
 					<version>3.1.8</version>		
 				</dependency>
+
+				<!-- knx.devicemanager should start as last bundle,
+				 but current artifact is always the last one!! -->
+				<dependency>
+					<groupId>org.universAAL.lddi</groupId>
+					<artifactId>knx.devicemanager</artifactId>
+				</dependency>
+
 			</dependencies>
 		</profile>
 	</profiles>
