--- a/lddi.hw.exporter.activityhub/pom.xml
+++ b/lddi.hw.exporter.activityhub/pom.xml
@@ -9,8 +9,7 @@
 		<version>1.1.1-SNAPSHOT</version>
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
-	<groupId>org.universAAL.lddi</groupId>
-	<artifactId>hw.exporter.activityhub</artifactId>
+	<artifactId>lddi.hw.exporter.activityhub</artifactId>
 	<version>0.0.4-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
