--- a/knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/pom.xml
+++ b/knx.refinementdrivers/knx.dpt1refinementdriver.iso11073/pom.xml
@@ -2,14 +2,13 @@
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
 		<artifactId>lddi.pom</artifactId>
-		<version>1.1.0</version>
+		<version>1.1.1-SNAPSHOT</version>
 		<relativePath>../../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.universAAL.lddi</groupId>
-	<artifactId>knx.dpt1refinementdriver.iso11073</artifactId>
+	<artifactId>lddi.knx.dpt1refinementdriver.iso11073</artifactId>
 	<packaging>bundle</packaging>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.5-SNAPSHOT</version>
 	<name>KNX Refinement driver for Datapoint Type 1.* to ISO 11073-10471 device</name>
 	<description>Encoding and decoding of KNX Datapoint Types 1.* with Format B1. Is registered as OSGI driver service in the framework registry. This refinement driver maps and creates a suitable device from ISO 11073-10471 specification and registers it in the OSGi registry.
 	</description>
@@ -60,11 +59,11 @@
 
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
-			<artifactId>knx.library</artifactId>
+			<artifactId>lddi.knx.library</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
-			<artifactId>iso11073.library</artifactId>
+			<artifactId>lddi.iso11073.library</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
@@ -86,10 +85,10 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.knx.dpt1refinementdriver.iso11073.Activator</Bundle-Activator>
+						<Bundle-Activator>org.universAAL.lddi.knx.dpt1refinementdriver.iso11073.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.knx.dpt1refinementdriver.iso11073</Export-Package>
+						<Export-Package>org.universAAL.lddi.knx.dpt1refinementdriver.iso11073</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
