--- a/hw.exporter.zigbee.ha/pom.xml
+++ b/hw.exporter.zigbee.ha/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.universAAL.lddi</groupId>
 		<artifactId>lddi.pom</artifactId>
 		<version>1.1.1-SNAPSHOT</version>
-		<relativePath>../pom/pom.xml</relativePath>
+		<relativePath>../lddi.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>hw.exporter.zigbee.ha</artifactId>
 	<version>1.1.1-SNAPSHOT</version>
