--- a/lddi.hw.exporter.activityhub/pom.xml
+++ b/lddi.hw.exporter.activityhub/pom.xml
@@ -61,11 +61,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.container.osgi</artifactId>
+			<artifactId>mw.data.representation.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation.osgi</artifactId>
+			<artifactId>mw.bus.model.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -76,18 +76,6 @@
 			<artifactId>mw.bus.service.osgi</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.phWorld</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
-		</dependency>
-		
-<!-- 		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.serialization</artifactId>
-		</dependency> -->
-
-
-		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>lddi.iso11073.library</artifactId>
 		</dependency>
@@ -95,6 +83,11 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.activityhub</artifactId>
 			<version>1.1.5-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.phWorld</artifactId>
+			<version>1.1.4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
