--- a/hw.exporter.zigbee.ha/pom.xml
+++ b/hw.exporter.zigbee.ha/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.1.1-SNAPSHOT</version>
 		<relativePath>../lddi.pom/pom.xml</relativePath>
 	</parent>
-	<artifactId>hw.exporter.zigbee.ha</artifactId>
+	<artifactId>lddi.exporter.zigbee.ha</artifactId>
 	<version>1.1.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	
