--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
+lddi.hw.exporter.activityhub/.classpath
+lddi.hw.exporter.activityhub/.project
+lddi.hw.exporter.activityhub/.settings
+lddi.hw.exporter.activityhub/target
+lddi.iso11073.library/.classpath
+lddi.iso11073.library/.project
+lddi.iso11073.library/.settings
+lddi.iso11073.library/target
+lddi.knx.devicemanager/.classpath
+lddi.knx.devicemanager/.project
+lddi.knx.devicemanager/.settings
+lddi.knx.devicemanager/target
+lddi.knx.library/.classpath
+lddi.knx.library/.project
+lddi.knx.library/.settings
+lddi.knx.library/target
 lddi.knx.networkdriver/.classpath
 lddi.knx.networkdriver/.project
 lddi.knx.networkdriver/.settings
 lddi.knx.networkdriver/target
+lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.classpath
+lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.project
+lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.settings
+lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/target
 lddi.pom/.project
 lddi.pom/.settings
+lddi.zigbee.exporter/.classpath
+lddi.zigbee.exporter/.project
+lddi.zigbee.exporter/.settings
+lddi.zigbee.exporter/target
